-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.1.0 Beta 1
-
None
-
Ubuntu 11.10
-
6e32c7311b1690d36023caa688823944551a697c
1 - run:
import QtQuick 2.1 import QtQuick.Controls 1.0 ApplicationWindow { width: 640 height: 480 }
2 - resize the window
=> the following warning is generated:
QQuickItem: Cannot set activeFocusOnTab to false once item is the active focus item.
It happens on Ubuntu. Not on Windows though.
- is required for
-
QTBUG-31104 Qt 5.1 beta broken example applications
-
- Closed
-