Fix a warning when setActiveFocusOnTab(false) for root item

Task-number: QTBUG-31114

Change-Id: I4d6aac534fbc1e84593e4d7084e6a892eea4256c
Reviewed-by: Caroline Chao <caroline.chao@digia.com>
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>